Fix T46493: Wrong camera zoom blur with non-unit pixel aspect